--- a/strategy/composer.json
+++ b/strategy/composer.json
@@ -1,4 +1,16 @@
 {
+  "name": "lozynskyi/patterns",
+  "description": "description",
+  "minimum-stability": "stable",
+  "license": "MIT",
+  "authors": [
+    {
+      "name": "pol",
+      "email": "slayter007@gmail.com"
+    }
+  ],
+  "require": {
+  },
   "autoload": {
     "psr-4": {
       "App\\": "app/"
