--- a/specification/composer.json
+++ b/specification/composer.json
@@ -1,6 +1,6 @@
 {
   "name": "lozynskyi/patterns",
-  "description": "description",
+  "description": "Specification pattern.",
   "minimum-stability": "stable",
   "license": "MIT",
   "authors": [
