--- a/strategy/composer.json
+++ b/strategy/composer.json
@@ -1,6 +1,6 @@
 {
   "name": "lozynskyi/patterns",
-  "description": "description",
+  "description": "Strategy pattern.",
   "minimum-stability": "stable",
   "license": "MIT",
   "authors": [
