--- a/factory/composer.json
+++ b/factory/composer.json
@@ -1,8 +1,8 @@
 {
   "name": "lozynskyi/patterns",
-  "description": "Check the quality of the code on the PSR standard.",
+  "description": "factory pattern",
   "minimum-stability": "stable",
-  "license": "Apache-2.0 License",
+  "license": "MIT",
   "authors": [
     {
       "name": "pol",
@@ -10,8 +10,6 @@
     }
   ],
   "require": {
-    "brainmaestro/composer-git-hooks": "^2.8",
-    "squizlabs/php_codesniffer": "^3.6"
   },
   "autoload": {
     "psr-4": {
