--- a/event_dispatcher/composer.json
+++ b/event_dispatcher/composer.json
@@ -12,6 +12,9 @@
   "require": {
     "ext-json": "*"
   },
+  "require-dev": {
+      "phpunit/phpunit": "^7"
+  }
   "autoload": {
     "psr-4": {
       "App\\": "app/"
