--- a/event_dispatcher/composer.json
+++ b/event_dispatcher/composer.json
@@ -14,11 +14,12 @@
   },
   "require-dev": {
       "phpunit/phpunit": "^7"
-  }
+  },
   "autoload": {
     "psr-4": {
       "App\\": "app/",
       "App\\Tests": "tests",
+      "App\\Stubs": "stubs",
     }
   }
 }
