--- a/event_dispatcher/composer.json
+++ b/event_dispatcher/composer.json
@@ -15,11 +15,15 @@
   "require-dev": {
       "phpunit/phpunit": "^7"
   },
-  "autoload": {
+    "autoload": {
     "psr-4": {
-      "App\\": "app/",
+      "App\\": "app/"
+    }
+  }
+  "autoload-dev": {
+    "psr-4": {
       "App\\Tests": "tests",
-      "App\\Stubs": "stubs",
+      "App\\Stubs": "stubs"
     }
   }
 }
