--- a/event_dispatcher/composer.json
+++ b/event_dispatcher/composer.json
@@ -13,17 +13,17 @@
     "ext-json": "*"
   },
   "require-dev": {
-      "phpunit/phpunit": "^7"
+      "phpunit/phpunit": "*"
   },
-    "autoload": {
+  "autoload": {
     "psr-4": {
       "App\\": "app/"
     }
-  }
+  },
   "autoload-dev": {
     "psr-4": {
-      "App\\Tests": "tests",
-      "App\\Stubs": "stubs"
+      "App\\Tests\\": "tests",
+      "App\\Stubs\\": "stubs"
     }
   }
 }
