--- a/prototype/composer.json
+++ b/prototype/composer.json
@@ -1,1 +1,19 @@
-
+{
+  "name": "lozynskyi/patterns",
+  "description": "Prototype Pattern",
+  "minimum-stability": "stable",
+  "license": "MIT",
+  "authors": [
+    {
+      "name": "pol",
+      "email": "slayter007@gmail.com"
+    }
+  ],
+  "require": {
+  },
+  "autoload": {
+    "psr-4": {
+      "App\\": "app/"
+    }
+  }
+}
